Добавлен Css Шаблона Добавлена культура и ресурсы

--- a/TopSkillsWeb/Views/_ViewImports.cshtml
+++ b/TopSkillsWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using TopSkillsWeb
 @using TopSkillsWeb.Models
+@using TopSkillsWeb.Resources
+@using System.Globalization
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, TopSkillsWeb
