--- a/TopSkillsWeb/Views/Home/Index.cshtml
+++ b/TopSkillsWeb/Views/Home/Index.cshtml
@@ -1,8 +1,16 @@
-﻿@{
+﻿@model IEnumerable<Core.User>
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <ul>
+    @foreach (var item in Model)
+    {
+       <li>@item.Id - @item.UserName</li> 
+    }
+    </ul>
+
 </div>
