--- a/TopSkillsWeb/Views/Account/ModalResetAvatarConfirmation.cshtml
+++ b/TopSkillsWeb/Views/Account/ModalResetAvatarConfirmation.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="modal-dialog modal-sm modal-dialog-centered" role="document">
     <div class="modal-content">
-        <button type="button" class="btn-close" onclick="globalCloseModal()"></button>
+        <button type="button" class="btn-close" onclick="CloseModal()"></button>
         <div class="modal-status bg-danger"></div>
         <div class="modal-body text-center py-4">
             <!-- Download SVG icon from http://tabler-icons.io/i/alert-triangle -->
