--- a/TopSkillsWeb/Views/Account/ModalSecretKey.cshtml
+++ b/TopSkillsWeb/Views/Account/ModalSecretKey.cshtml
@@ -3,13 +3,13 @@
     <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title">Установка Secret Phrase</h5>
-            <button type="button" class="btn-close" onclick="globalCloseModal()"></button>
+            <button type="button" class="btn-close" onclick="CloseModal()"></button>
         </div>
         <div class="modal-body">
             <div class="row mb-3 align-items-end">
                 <label class="form-label">Secret Phrase</label>
                 <div class="input-group input-group-flat">
-                    <input type="password" class="form-control" autocomplete="off" id="secretPhrase">
+                    <input type="text" class="form-control" autocomplete="off" id="secretPhrase" onfocus="this.setAttribute('type', 'password')">
                     <span class="input-group-text">
                         <a onclick="onToggleInput('secretPhrase');" class="link-secondary" style="cursor: pointer !important;">
 
@@ -22,7 +22,7 @@
             <div class="row mb-3 align-items-end">
                 <label class="form-label">Подтверждение</label>
                 <div class="input-group input-group-flat">
-                    <input type="password" class="form-control" autocomplete="off" id="secretPhrase_confirmation">
+                    <input type="text" class="form-control" autocomplete="off" id="secretPhrase_confirmation" onfocus="this.setAttribute('type', 'password')">
                     <span class="input-group-text">
                         <a onclick="onToggleInput('secretPhrase_confirmation');" class="link-secondary" style="cursor: pointer !important;">
 
