--- a/TopSkillsWeb/Views/Account/ModalResetPassword.cshtml
+++ b/TopSkillsWeb/Views/Account/ModalResetPassword.cshtml
@@ -3,16 +3,15 @@
     <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title">Сброс пароля</h5>
-            <button type="button" class="btn-close" onclick="globalCloseModal()"></button>
+            <button type="button" class="btn-close" onclick="CloseModal()"></button>
         </div>
         <div class="modal-body">
             <div class="row mb-3 align-items-end">
                 <label class="form-label">Новый пароль</label>
                 <div class="input-group input-group-flat">
-                    <input type="password" class="form-control" autocomplete="off" id="password">
+                    <input class="form-control" name="pass" autocomplete="new-password" id="password" onfocus="this.setAttribute('type', 'password')">
                     <span class="input-group-text">
                         <a onclick="onToggleInput('password');" class="link-secondary" style="cursor: pointer !important;">
-                           
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-eye-bolt" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" /><path d="M13.1 17.936a9.28 9.28 0 0 1 -1.1 .064c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6" /><path d="M19 16l-2 3h4l-2 3" /></svg>
                         </a>
 
@@ -22,7 +21,7 @@
             <div class="row mb-3 align-items-end">
                 <label class="form-label">Подтверждение пароля</label>
                 <div class="input-group input-group-flat">
-                    <input type="password" class="form-control" autocomplete="off" id="password_confirmation">
+                    <input class="form-control" name="pass" autocomplete="new-password" id="password_confirmation" onfocus="this.setAttribute('type', 'password')">
                     <span class="input-group-text">
                         <a onclick="onToggleInput('password_confirmation');" class="link-secondary" style="cursor: pointer !important;">
                           
