--- a/TopSkillsWeb/Views/Account/Register.cshtml
+++ b/TopSkillsWeb/Views/Account/Register.cshtml
@@ -2,51 +2,35 @@
 @{
     Layout = null;
 }
-<!doctype html>
-<html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>xEncryption - Регистрация</title>
-    <!-- CSS files -->
-    <link href="~/css/dist/css/tabler.min.css?1692870487" rel="stylesheet" />
-    <link href="~/css/dist/css/tabler-flags.min.css?1692870487" rel="stylesheet" />
-    <link href="~/css/dist/css/tabler-payments.min.css?1692870487" rel="stylesheet" />
-    <link href="~/css/dist/css/tabler-vendors.min.css?1692870487" rel="stylesheet" />
-    <link href="~/css/dist/css/demo.min.css?1692870487" rel="stylesheet" />
-    <style>
-        @@import url('https://rsms.me/inter/inter.css');
-
-        :root {
-            --tblr-font-sans-serif: 'Inter Var', -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
-        }
-
-        body {
-            font-feature-settings: "cv03", "cv04", "cv11";
-        }
-    </style>
+    <title>@Resource.NameApp - @Resource.Register</title>
+    <link href="~/css/tabler.min.css" rel="stylesheet" />
+    <link runat="server" rel="shortcut icon" href="~/logo.ico" type="image/x-icon" />
+    <link runat="server" rel="icon" href="~/logo.ico" type="image/ico" />
 </head>
 <body class=" d-flex flex-column">
-    <script src="~/css/dist/js/demo-theme.min.js?1692870487"></script>
+    <script src="~/js/change-theme.min.js"></script>
     <div class="page page-center">
         <div class="container container-tight py-4">
             <div class="text-center mb-4">
-                <a href="." class="navbar-brand navbar-brand-autodark">
-                    <img src="~/static/security.svg" width="110" height="32" alt="Tabler" class="navbar-brand-image">
+                <a class="navbar-brand navbar-brand-autodark">
+                    <img src="~/Images/Logo.png" width="110" height="32" alt="Tabler" class="navbar-brand-image">
                 </a>
                 <div>
                     <span class="nav-link-title">
-                        xEncryption
+                        @Resource.NameApp
                     </span>
                 </div>
-                
+
             </div>
             <form class="card card-md" method="post" asp-controller="Account" asp-action="Register">
                 <div class="card-body">
-                    <h2 class="card-title text-center mb-4">Регистрация учетной записи</h2>
+                    <h2 class="card-title text-center mb-4">@Resource.AccountRegistration</h2>
                     <div class="mb-3">
-                        <label class="form-label">Имя пользователя</label>
+                        <label class="form-label">@Resource.UserName</label>
                         <span asp-validation-for="Username" />
                         <input type="text" class="form-control" placeholder="Username123" asp-for="@Model.Username">
                     </div>
@@ -56,13 +40,13 @@
                         <input type="email" class="form-control" placeholder="example@gmail.com" asp-for="Email">
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Пароль</label>
+                        <label class="form-label">@Resource.Password</label>
                         <span asp-validation-for="Password" />
                         <div class="input-group input-group-flat">
 
                             <input type="password" class="form-control" placeholder="********" autocomplete="off" asp-for="Password">
                             <span class="input-group-text">
-                                <a href="#" class="link-secondary" title="Show password" data-bs-toggle="tooltip">
+                                <a href="#" class="link-secondary" title="@Resource.ShowPassword" data-bs-toggle="tooltip">
                                     <!-- Download SVG icon from http://tabler-icons.io/i/eye -->
                                     <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" /><path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6" /></svg>
                                 </a>
@@ -70,38 +54,33 @@
                         </div>
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Подтверждение пароля</label>
+                        <label class="form-label">@Resource.ConfrimPassword</label>
                         <span asp-validation-for="PasswordConfirm" />
                         <div class="input-group input-group-flat">
 
                             <input type="password" class="form-control" placeholder="********" autocomplete="off" asp-for="PasswordConfirm">
                             <span class="input-group-text">
-                                <a href="#" class="link-secondary" title="Show password" data-bs-toggle="tooltip">
+                                <a href="#" class="link-secondary" title="@Resource.ShowPassword" data-bs-toggle="tooltip">
                                     <!-- Download SVG icon from http://tabler-icons.io/i/eye -->
                                     <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" /><path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6" /></svg>
                                 </a>
                             </span>
                         </div>
                     </div>
-                    <div class="mb-3">
+                    @* <div class="mb-3">
                         <label class="form-check">
                             <input type="checkbox" class="form-check-input" />
                             <span class="form-check-label">Agree the <a href="./terms-of-service.html" tabindex="-1">terms and policy</a>.</span>
                         </label>
-                    </div>
+                    </div> *@
                     <div class="form-footer">
-                        <button type="submit" class="btn btn-primary w-100">Зарегистрироваться</button>
+                        <button type="submit" class="btn btn-primary w-100">@Resource.SignUp</button>
                     </div>
                 </div>
             </form>
             <div class="text-center text-secondary mt-3">
-                Уже есть учетная запись? <a asp-action="Login" asp-controller="Account" method="get" tabindex="-1">Вход</a>
+                @Resource.AlreadyHaveAnAccount <a asp-action="Login" asp-controller="Account" method="get" tabindex="-1">@Resource.Login</a>
             </div>
         </div>
     </div>
-    <!-- Libs JS -->
-    <!-- Tabler Core -->
-    <script src="~/css/dist/js/tabler.min.js?1692870487" defer></script>
-    <script src="~/css/dist/js/demo.min.js?1692870487" defer></script>
 </body>
-</html>
