--- a/TopSkillsWeb/Views/Account/Tabs/MyAccountTabs.cshtml
+++ b/TopSkillsWeb/Views/Account/Tabs/MyAccountTabs.cshtml
@@ -6,6 +6,14 @@
     <h3 class="card-title">Профиль</h3>
     <div class="row align-items-center">
         <div class="col-auto">
+            @if (ViewBag.Avatar != null)
+            {
+                <span id="avatar_container" class="avatar avatar-xl" style="background-image: url(data:image/jpeg;base64,@(Convert.ToBase64String(ViewBag.Avatar)))"></span>
+            }
+            else
+            {
+                <span id="avatar_container" class="avatar avatar-xl"></span>
+            }
         </div>
         <div class="col-auto">
             <a onclick="document.getElementById('avatart_fileForm').click();" class="btn">
