--- a/TopSkillsWeb/Views/Shared/_Layout.cshtml
+++ b/TopSkillsWeb/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                     <h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
                         <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                             <img src="~/logo.ico" width="110" height="32" alt="TopSkillsWeb" class="navbar-brand-image">
-                            TopSkillsWeb
+                            @Resource.NameApp
                         </a>
                     </h1>
                     <div class="navbar-nav flex-row order-md-last">
@@ -422,11 +422,21 @@
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#navbar-help" data-bs-toggle="dropdown" data-bs-auto-close="outside" role="button" aria-expanded="false">
                                         <span class="nav-link-icon d-md-none d-lg-inline-block">
-                                            <!-- Download SVG icon from http://tabler-icons.io/i/lifebuoy -->
-                                            <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><circle cx="12" cy="12" r="4" /><circle cx="12" cy="12" r="9" /><line x1="15" y1="15" x2="18.35" y2="18.35" /><line x1="9" y1="15" x2="5.65" y2="18.35" /><line x1="5.65" y1="5.65" x2="9" y2="9" /><line x1="18.35" y1="5.65" x2="15" y2="9" /></svg>
+                                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-cog" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                                <path d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0" />
+                                                <path d="M6 21v-2a4 4 0 0 1 4 -4h2.5" />
+                                                <path d="M19.001 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
+                                                <path d="M19.001 15.5v1.5" />
+                                                <path d="M19.001 21v1.5" />
+                                                <path d="M22.032 17.25l-1.299 .75" />
+                                                <path d="M17.27 20l-1.3 .75" />
+                                                <path d="M15.97 17.25l1.3 .75" />
+                                                <path d="M20.733 20l1.3 .75" />
+                                            </svg>
                                         </span>
                                         <span class="nav-link-title">
-                                            Help
+                                            @Resource.Administration
                                         </span>
                                     </a>
                                     <div class="dropdown-menu">
@@ -481,4 +491,21 @@
 
 <script type="text/javascript">
 
+    function CloseModal() {
+        $('#modal_body').hide();
+        $("#modal_body").removeClass("show");
+    }
+
+    function OpenModal() {
+        $('#modal_body').show();
+        $("#modal_body").addClass("show");
+    }
+
+    function AlertSuccess(message) {
+        $.get('@Url.Action("ShowModalSuccess", "Home")', { message: message }, function (data) {
+            $('#modal_body').html(data);
+            OpenModal();
+        });
+
+    }
 </script>
