--- a/TopSkillsWeb/Views/Shared/_Layout.cshtml
+++ b/TopSkillsWeb/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                     <div class="navbar navbar-light">
                         <div class="container-xl">
                             <ul class="navbar-nav">
-                                <li class="nav-item">
+                                <li id="Home" class="nav-item">
                                     <a class="nav-link" href="./">
                                         <span class="nav-link-icon d-md-none d-lg-inline-block">
                                             <!-- Download SVG icon from http://tabler-icons.io/i/home -->
@@ -78,21 +78,21 @@
                                         </span>
                                     </a>
                                 </li>
-                                <li class="nav-item dropdown">
+                                <li id="Reference" class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#navbar-base" data-bs-toggle="dropdown" data-bs-auto-close="outside" role="button" aria-expanded="false">
                                         <span class="nav-link-icon d-md-none d-lg-inline-block">
                                             <!-- Download SVG icon from http://tabler-icons.io/i/package -->
                                             <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><polyline points="12 3 20 7.5 20 16.5 12 21 4 16.5 4 7.5 12 3" /><line x1="12" y1="12" x2="20" y2="7.5" /><line x1="12" y1="12" x2="12" y2="21" /><line x1="12" y1="12" x2="4" y2="7.5" /><line x1="16" y1="5.25" x2="8" y2="9.75" /></svg>
                                         </span>
                                         <span class="nav-link-title">
-                                            Interface
+                                            @Resource.References
                                         </span>
                                     </a>
                                     <div class="dropdown-menu">
                                         <div class="dropdown-menu-columns">
                                             <div class="dropdown-menu-column">
-                                                <a class="dropdown-item" href="./empty.html">
-                                                    Empty page
+                                                <a class="dropdown-item" asp-action="Index" asp-controller="Group">
+                                                    @Resource.GroupsStudents
                                                 </a>
                                                 <a class="dropdown-item" href="./accordion.html">
                                                     Accordion
@@ -259,7 +259,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="nav-item">
+                                <li id="" class="nav-item">
                                     <a class="nav-link" href="./form-elements.html">
                                         <span class="nav-link-icon d-md-none d-lg-inline-block">
                                             <!-- Download SVG icon from http://tabler-icons.io/i/checkbox -->
@@ -349,7 +349,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="nav-item active dropdown">
+                                <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#navbar-layout" data-bs-toggle="dropdown" data-bs-auto-close="outside" role="button" aria-expanded="false">
                                         <span class="nav-link-icon d-md-none d-lg-inline-block">
                                             <!-- Download SVG icon from http://tabler-icons.io/i/layout-2 -->
@@ -490,6 +490,17 @@
 
 
 <script type="text/javascript">
+    //Переключатель активных вкладок
+    $(document).ready(function () {
+        $('.nav-item').removeClass('active');
+        $(".nav-link").click(function (e) {
+            localStorage.setItem('CurrentTab', $(e.currentTarget).parent('.nav-item').prop('id'))
+        });
+        let nowTab = localStorage.getItem('CurrentTab');
+        nowTab ??= 'Home';
+        $('#' + nowTab).addClass('active');
+    });
+
 
     function CloseModal() {
         $('#modal_body').hide();
