--- a/TopSkillsWeb/Views/Shared/Components/UserComponent/default.cshtml
+++ b/TopSkillsWeb/Views/Shared/Components/UserComponent/default.cshtml
@@ -10,7 +10,7 @@
         <span id="avatar_login" class="avatar"></span>
     }
     <div class="d-none d-xl-block ps-2">
-        <div>@Model.UserName</div>
+        <div class="UserNameDiv" >@Model.UserName</div>
         <div class="mt-1 small text-secondary">@Model.RoleName</div>
     </div>
 </a>
