--- a/TopSkillsWeb/wwwroot/css/tabler.css
+++ b/TopSkillsWeb/wwwroot/css/tabler.css
@@ -17679,7 +17679,7 @@ body.theme-dark .hide-theme-dark, body[data-bs-theme=dark] .hide-theme-dark {
   --tblr-tabler-lt-rgb: 22, 41, 63;
 }
 [data-bs-theme=dark] .navbar-brand-autodark .navbar-brand-image {
-  filter: brightness(0) invert(1);
+  /*filter: brightness(0) invert(1);*/
 }
 
 .accordion {
