--- a/TopSkillsWeb/Views/Shared/_Layout.cshtml
+++ b/TopSkillsWeb/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" /> *@
     <link rel="stylesheet" href="~/css/partTwo.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/tabler.min.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/coloris/coloris.min.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/tabler-vendors.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/TopSkillsWeb.styles.css" asp-append-version="true" />
     <link runat="server" rel="shortcut icon" href="~/logo.ico" type="image/x-icon" />
@@ -14,9 +16,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.css" crossorigin="anonymous" />
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-
+    
 </head>
-<body>
+<body data-bs-theme="">
     <script src="~/js/change-theme.min.js"></script>
     <div class="page">
         <div class="sticky-top">
@@ -33,12 +35,12 @@
                     </h1>
                     <div class="navbar-nav flex-row order-md-last">
                         <div class="d-none d-md-flex">
-                            <a href="?theme=dark" class="nav-link px-0 hide-theme-dark" title="Enable dark mode" data-bs-toggle="tooltip"
+                            <a href="?theme=dark" class="nav-link px-0 hide-theme-dark" title="@Resource.EnableDarkMode" data-bs-toggle="tooltip"
                                data-bs-placement="bottom">
                                 <!-- Download SVG icon from http://tabler-icons.io/i/moon -->
                                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z" /></svg>
                             </a>
-                            <a href="?theme=light" class="nav-link px-0 hide-theme-light" title="Enable light mode" data-bs-toggle="tooltip"
+                            <a href="?theme=light" class="nav-link px-0 hide-theme-light" title="@Resource.EnableLightMode" data-bs-toggle="tooltip"
                                data-bs-placement="bottom">
                                 <!-- Download SVG icon from http://tabler-icons.io/i/sun -->
                                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><circle cx="12" cy="12" r="4" /><path d="M3 12h1m8 -9v1m8 8h1m-9 8v1m-6.4 -15.4l.7 .7m12.1 -.7l-.7 .7m0 11.4l.7 .7m-12.1 -.7l-.7 .7" /></svg>
@@ -90,44 +92,47 @@
                                     <div class="dropdown-menu dropdown">
                                         <div class="">
                                             @* <div class="dropdown-menu-column"> *@
-                                                <a class="dropdown-item" asp-action="Index" asp-controller="Teacher">
-                                                    @Resource.Teachers
-                                                </a>
-                                                <a class="dropdown-item" asp-action="Index" asp-controller="Course">
-                                                    @Resource.Courses
-                                                </a>
-                                                <a class="dropdown-item" asp-action="Index" asp-controller="Group">
-                                                    @Resource.GroupsStudents
-                                                </a>
-                                                <a class="dropdown-item" asp-action="Index" asp-controller="Student">
-                                                    @Resource.Students
-                                                </a>
-                                                @* <div class="dropend">
-                                                    <a class="dropdown-item dropdown-toggle" href="#sidebar-cards" data-bs-toggle="dropdown" data-bs-auto-close="outside" role="button" aria-expanded="false">
-                                                        Cards
-                                                        <span class="badge badge-sm bg-green-lt text-uppercase ms-auto">New</span>
-                                                    </a>
-                                                    <div class="dropdown-menu">
-                                                        <a href="./cards.html" class="dropdown-item">
-                                                            Sample cards
-                                                        </a>
-                                                        <a href="./card-actions.html" class="dropdown-item">
-                                                            Card actions
-                                                            <span class="badge badge-sm bg-green-lt text-uppercase ms-auto">New</span>
-                                                        </a>
-                                                        <a href="./cards-masonry.html" class="dropdown-item">
-                                                            Cards Masonry
-                                                        </a>
-                                                    </div>
-                                                </div> 
-                                                
+                                            <a class="dropdown-item" asp-action="Index" asp-controller="Teacher">
+                                                @Resource.Teachers
+                                            </a>
+                                            <a class="dropdown-item" asp-action="Index" asp-controller="Course">
+                                                @Resource.Courses
+                                            </a>
+                                            <a class="dropdown-item" asp-action="Index" asp-controller="Group">
+                                                @Resource.GroupsStudents
+                                            </a>
+                                            <a class="dropdown-item" asp-action="Index" asp-controller="Student">
+                                                @Resource.Students
+                                            </a>
+                                            <a class="dropdown-item" asp-action="Index" asp-controller="Attendance">
+                                                Календарь
+                                            </a>
+                                            @* <div class="dropend">
+                                            <a class="dropdown-item dropdown-toggle" href="#sidebar-cards" data-bs-toggle="dropdown" data-bs-auto-close="outside" role="button" aria-expanded="false">
+                                            Cards
+                                            <span class="badge badge-sm bg-green-lt text-uppercase ms-auto">New</span>
+                                            </a>
+                                            <div class="dropdown-menu">
+                                            <a href="./cards.html" class="dropdown-item">
+                                            Sample cards
+                                            </a>
+                                            <a href="./card-actions.html" class="dropdown-item">
+                                            Card actions
+                                            <span class="badge badge-sm bg-green-lt text-uppercase ms-auto">New</span>
+                                            </a>
+                                            <a href="./cards-masonry.html" class="dropdown-item">
+                                            Cards Masonry
+                                            </a>
+                                            </div>
+                                            </div>
+
                                             </div>
                                             <div class="dropdown-menu-column">
-                                                <a class="dropdown-item" href="./pagination.html">
-                                                    <!-- Download SVG icon from http://tabler-icons.io/i/pie-chart -->
-                                                    Pagination
-                                                </a>
-                                                
+                                            <a class="dropdown-item" href="./pagination.html">
+                                            <!-- Download SVG icon from http://tabler-icons.io/i/pie-chart -->
+                                            Pagination
+                                            </a>
+
                                             </div> *@
                                         </div>
                                     </div>
@@ -154,18 +159,18 @@
                                     </a>
                                     <div class="dropdown-menu">
                                         @* <a class="dropdown-item" href="./docs/">
-                                            Documentation
+                                        Documentation
                                         </a>
                                         <a class="dropdown-item" href="./changelog.html">
-                                            Changelog
+                                        Changelog
                                         </a>
                                         <a class="dropdown-item" href="https://github.com/tabler/tabler" target="_blank" rel="noopener">
-                                            Source code
+                                        Source code
                                         </a>
                                         <a class="dropdown-item text-pink" href="https://github.com/sponsors/codecalm" target="_blank" rel="noopener">
-                                            <!-- Download SVG icon from http://tabler-icons.io/i/heart -->
-                                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-inline me-1" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428m0 0a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572" /></svg>
-                                            Sponsor project!
+                                        <!-- Download SVG icon from http://tabler-icons.io/i/heart -->
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-inline me-1" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428m0 0a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572" /></svg>
+                                        Sponsor project!
                                         </a> *@
                                     </div>
                                 </li>
@@ -177,7 +182,7 @@
         </div>
 
         <div class="page-wrapper">
-                @RenderBody()
+            @RenderBody()
         </div>
 
         @* <footer class="border-top footer text-muted">
@@ -198,7 +203,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-rc.0/js/i18n/ru.min.js"></script>
     <script src="~/lib/apexcharts/dist/apexcharts.min.js" asp-append-version="true"></script>
     <script src="~/js/LocaleChart.js" asp-append-version="true"></script>
-    
+    <script src="~/lib/coloris/coloris.min.js"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
@@ -226,9 +232,9 @@
                         $('#modalLoading').hide();
                     } else {
                         if (textStatus != 'abort') {
-                                alert("Text: " + textStatus + "\n Error: " + errorThrown + "\n Xhr: " + jqXHR.responseText);
-                                $('#loading').hide();
-                                $('#modalLoading').hide();
+                            alert("Text: " + textStatus + "\n Error: " + errorThrown + "\n Xhr: " + jqXHR.responseText);
+                            $('#loading').hide();
+                            $('#modalLoading').hide();
                         }
 
                     }
@@ -237,10 +243,10 @@
         });
 
         $('input.disablecopypaste').bind('copy paste', function (e) {
-                e.preventDefault();
-                // myString.replace(/[^\w\s!?]/g, '');
+            e.preventDefault();
+            // myString.replace(/[^\w\s!?]/g, '');
         });
-        
+
     });
 
 
