--- a/TopSkillsWeb/Views/Shared/_Layout.cshtml
+++ b/TopSkillsWeb/Views/Shared/_Layout.cshtml
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="~/css/partTwo.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/tabler.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/coloris/coloris.min.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/tabler-vendors.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/TopSkillsWeb.styles.css" asp-append-version="true" />
     <link runat="server" rel="shortcut icon" href="~/logo.ico" type="image/x-icon" />
@@ -267,4 +266,14 @@
         });
 
     }
+
+    function getRandomColor() {
+        var letters = '0123456789ABCDEF';
+        var color = '#';
+        for (var i = 0; i < 6; i++) {
+            color += letters[Math.floor(Math.random() * 16)];
+        }
+        return color;
+    }
+
 </script>
