--- a/TopSkillsWeb/Views/Attendance/Index.cshtml
+++ b/TopSkillsWeb/Views/Attendance/Index.cshtml
@@ -1,4 +1,8 @@
-﻿<div class="page-header d-print-none">
+﻿@{
+    ViewData["Title"] = Resource.Attendance;
+}
+
+<div class="page-header d-print-none">
     <div class="container-xl">
         <div class="row g-2 align-items-center">
             <div class="col">
