--- a/TopSkillsWeb/Views/Course/Index.cshtml
+++ b/TopSkillsWeb/Views/Course/Index.cshtml
@@ -1,4 +1,7 @@
 ﻿@model IEnumerable<Core.Course>
+@{
+    ViewData["Title"] = Resource.Courses;
+}
 <div class="page-header d-print-none">
     <div class="container-xl">
         <div class="row g-2 align-items-center">
