--- a/TopSkillsWeb/Views/Teacher/Index.cshtml
+++ b/TopSkillsWeb/Views/Teacher/Index.cshtml
@@ -1,4 +1,7 @@
 ﻿@model IEnumerable<Core.Teacher>
+@{
+    ViewData["Title"] = Resource.Teachers;
+}
 <div class="page-header d-print-none">
     <div class="container-xl">
         <div class="row g-2 align-items-center">
