--- a/TopSkillsWeb/Views/Student/ModalNewStudent.cshtml
+++ b/TopSkillsWeb/Views/Student/ModalNewStudent.cshtml
@@ -13,14 +13,14 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="mb-3">
-                        <label class="form-label">@Resource.LastName</label>
-                        <input id="LastNameInp" type="text" value="@(Model.LastName??="")" class="form-control">
+                        <label class="form-label required">@Resource.LastName</label>
+                        <input id="LastNameInp" type="text" value="@(Model.LastName??="")" class="form-control required">
                     </div>
                 </div>
                 <div class="col-lg-5">
                     <div class="mb-3">
-                        <label class="form-label">@Resource.FirstName</label>
-                        <input id="FirstNameInp" type="text" value="@(Model.FirstName??="")" class="form-control">
+                        <label class="form-label required">@Resource.FirstName</label>
+                        <input id="FirstNameInp" type="text" value="@(Model.FirstName??="")" class="form-control required">
                     </div>
                 </div>
                 <div class="col-lg-5">
@@ -31,13 +31,47 @@
                 </div>
                 <div class="col-lg-5">
                     <div class="mb-3">
-                        <label class="form-label">@Resource.Age</label>
-                        <input id="AgeInp" onkeypress="if (isNaN(String.fromCharCode(event.keyCode))) return false;" max="80" type="number" value="@(Model.Age)" class="form-control disablecopypaste">
+                        <label class="form-label required">@Resource.Age</label>
+                        <input id="AgeInp" onkeypress="if (isNaN(String.fromCharCode(event.keyCode))) return false;" max="80" type="number" value="@(Model.Age)" class="form-control disablecopypaste required">
                     </div>
                 </div>
             </div>
             <div class="row">
+                <div class="mb-3">
+                    <label class="form-label">@Resource.ParentFIO</label>
+                    <input id="ParentFIOInp" type="text" value="@(Model.ParentFIO??="")" class="form-control">
                 </div>
+                <div class="mb-3">
+                    <label class="form-label">@Resource.ParentNumberPhone</label>
+                    <input id="ParentNumberPhoneInp" type="text" value="@(Model.ParentPhoneNumber??="")" placeholder="+7 (000) 000-00-00" class="form-control" autocomplete="off" class="form-control">
+                </div>
+            </div>
+                    <div class="form-label">@Resource.Abonement</div>
+                    @if (Model.Abonement != null)
+                    {
+                        <div class="table-responsive">
+                            <table class="table table-sm table-borderless">
+                                <thead>
+                                    <tr>
+                                        <th>@Resource.Visits</th>
+                                        <th>@Resource.DateAbonementStart</th>
+                                    </tr>
+                                </thead>
+                                <tbody class="AbenementTBody">
+                                    <tr>
+                                        <td>
+                                            <span>@Model.Abonement.RemainingVisits</span>
+                                        </td>
+                                        <td>
+                                            <span>@Model.Abonement.StartDate</span>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    }
+                
+            
         </div>
         <div class="modal-footer">
             <button type="button" class="btn me-auto" onclick="CloseModal()">@Resource.Cancel</button>
@@ -72,7 +106,36 @@
         //     allowClear: true,
         //     width: "100%"
         // });
+        $.mask.definitions['h'] = "[0|1|3|4|5|6|7|9]"
+        $("#ParentNumberPhoneInp").mask("+7 (h99) 999-99-99");
+
+        $('input.required').on('keyup', function (event) {
+            let inp = event.currentTarget;
+            if (containsTextOrNumbers(inp.value)) {
+                inp.classList.remove('is-invalid');
+            }
+            else {
+                inp.classList.add('is-invalid');
+            }
+            console.log(inp.value);
+        });
     });
+
+
+
+
+    function ValidRequiredInputs() {
+        let ReturnValue = false;
+        $('inputs.required').each(function () {
+            if (containsTextOrNumbers($(this).val())) {
+                ReturnValue = true;
+            }
+            else {
+                ReturnValue = false;
+            }
+        });
+        return ReturnValue;
+    }
 
 
     function OnChangeStudent() {
@@ -82,10 +145,9 @@
         Student["MiddleName"] = $('#MiddleNameInp').val();
         Student["LastName"] = $('#LastNameInp').val();
         Student["Age"] = $('#AgeInp').val();
-        Student["Visits"] = @Model?.Visits;
-        Student["AbonimentStart"] = '@Model?.AbonimentStart.ToString()';
-
-            $.ajax({
+        Student["ParentFIO"] = $('#ParentFIOInp').val();
+        Student["ParentPhoneNumber"] = $('#ParentNumberPhoneInp').val();
+        $.ajax({
             type: "POST",
             url: '@Url.Action("OnAddUpdateStudent", "Student")',
             data: { Student: Student },
