--- a/TopSkillsWeb/wwwroot/css/CalendarTask.css
+++ b/TopSkillsWeb/wwwroot/css/CalendarTask.css
@@ -1,7 +1,7 @@
 ﻿
 
 :root {
-    --text-color: black;
+    --text-color: #182433;
     --body-background: #f5f5f5;
     --swipe-btns-hover-color: #28283b;
     --td-day-hover-color: #ebebeb;
@@ -12,6 +12,7 @@
     --border-radius: 0.5rem;
     --thead-td-bg-color: #f7f7f7;
     --max-height: 70vh;
+    --title-color: #182433;
 }
 
     :root[theme='dark'] {
@@ -25,9 +26,16 @@
         --border-color: #e2e8f0;
         --border-radius: 0.5rem;
         --max-height: 70vh;
+        --title-color: #dce1e7;
     }
 
+.page-title {
+    color: var(--title-color)
+}
 
+button {
+    color: var(--text-color);
+}
 
 html,
 body {
@@ -80,6 +88,7 @@ a {
 }
 
 .calendar-wrapper {
+    position: relative;
     width: 100%;
     /* margin: 3em auto;*/
     /*padding: 2em;*/
@@ -107,18 +116,19 @@ td {
     td.not-current {
         color: var(--td-not-current-color);
     }
-        td.not-current:hover{
-            cursor:not-allowed;
-            background-color:none !important;
+
+        td.not-current:hover {
+            cursor: not-allowed;
+            background-color: none !important;
         }
 
 
-        td.today {
-            font-weight: 700;
-            color: var(--td-today-color);
-            font-size: 1.5em;
-            font-size: 22px !important;
-        }
+    td.today {
+        font-weight: 700;
+        color: var(--td-today-color);
+        font-size: 1.5em;
+        font-size: 22px !important;
+    }
 
 thead td {
     /*border: 1px solid black;*/
@@ -130,10 +140,10 @@ thead td {
 }
 
 thead tr {
-    border-radius:var(--border-radius);
+    border-radius: var(--border-radius);
 }
 
-#btnPrev{
+#btnPrev {
     /* float: left;
     margin-bottom: 20px;*/
     border: 0;
@@ -173,7 +183,7 @@ thead tr {
         background-color: rgba(237,242,247,var(--bg-opacity));
     }
 
-    /*#btnPrev:hover,
+/*#btnPrev:hover,
     #btnNext:hover {
         color: var(--swipe-btns-hover-color);
         font-weight: bold;
@@ -195,7 +205,7 @@ thead tr {
 }
 
     .days:hover {
-       /* background-color: #505050 !important;*/
+        /* background-color: #505050 !important;*/
     }
 
 .month_header {
@@ -311,26 +321,60 @@ td > .flex {
 
 .TaskList {
     width: 100%;
-    max-height:9vh;
+    max-height: 9vh;
     overflow-y: auto;
     display: grid;
     justify-items: stretch;
-    grid-template-columns: auto auto;
-
+    grid-template-columns: repeat( auto-fit, minmax(150px, auto));
+    white-space: break-spaces;
+    overflow-x:hidden;
 }
 
+
+/*td ::-webkit-scrollbar {
+    width: 5px !important;*/ /* ширина scrollbar */
+/*}
+
+td ::-webkit-scrollbar-track {
+    background:  !important;*/ /* цвет дорожки */
+/*}
+
+td ::-webkit-scrollbar-thumb {
+    background-color: blue !important;*/ /* цвет плашки */
+    /*border-radius: 20px !important;*/ /* закругления плашки */
+    /*border: 3px solid orange !important;*/ /* padding вокруг плашки */
+/*}*/
+
+td ::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 4px;
+    height:4px;
+    
+}
+
+td ::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0,0,0,.5);
+    box-shadow: 0 0 1px rgba(255,255,255,.5);
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5)
+}
+
+
 .taskElement {
+    text-align:start;
     margin-left: 5px;
     width: max-content;
-    height:max-content;
+    max-width: 90%;
+    height: max-content;
     border: 1px solid #9d9d9d;
     max-height: 10vh;
     border-radius: var(--border-radius);
     padding: 0 5px 0 5px;
     margin-bottom: 5px;
     font-size: 14px;
-    overflow: hidden;
+    overflow-x: hidden;
 }
+
     .taskElement:hover {
         opacity: 0.7;
         /*background-color: #9d9d9d38;*/
@@ -339,9 +383,10 @@ td > .flex {
 .taskName {
     display: inline-block;
     line-height: 22px;
+    white-space: break-spaces;
 }
 
-    /*.taskName:hover {
+/*.taskName:hover {
         animation: trey 5s infinite;
     }*/
 
@@ -389,6 +434,34 @@ td > .flex {
         overflow: auto;
     }
 
+    /*td::-webkit-scrollbar
+    {
+        width: 1px !important;*/ /* ширина scrollbar */
+    /*}
+    td::-webkit-scrollbar-track
+    {
+        background: orange !important;*/ /* цвет дорожки */
+    /*}
+    td::-webkit-scrollbar-thumb
+    {
+        background-color: blue !important;*/ /* цвет плашки */
+        /*border-radius: 20px !important;*/ /* закругления плашки */
+        /*border: 3px solid orange !important;*/ /* padding вокруг плашки */
+    /*}*/
+
+    td ::-webkit-scrollbar {
+        -webkit-appearance: none;
+        width: 4px;
+        height: 4px;
+    }
+
+    td ::-webkit-scrollbar-thumb {
+        border-radius: 4px;
+        background-color: rgba(0,0,0,.5);
+        box-shadow: 0 0 1px rgba(255,255,255,.5);
+        -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5)
+    }
+
     tale > * {
         font-size: 10px !important;
     }
@@ -429,4 +502,36 @@ td > .flex {
     }
 }
 
+.loadingCalendar {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 23px;
+}
 
+    .loadingCalendar::before {
+        height: 100%;
+        position: absolute;
+        width: 100%;
+        content: '';
+        -webkit-backdrop-filter: blur(4px);
+        backdrop-filter: blur(4px);
+        background: #00000012;
+        z-index: 3;
+    }
+
+    .loadingCalendar .SpinnerTextContainer {
+        z-index: 4;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+        .loadingCalendar .SpinnerTextContainer .spinner-border {
+            height: 32px;
+            width: 32px;
+        }
